# distributed-kv

./: .gitignore  CMakeLists.txt  README.md  cluster.conf.example
.claude/: settings.local.json
bench/: BENCH_CLUSTER_SPEC.md  bench_cluster.cpp  bench_storage.cpp
include/cluster/: cluster_config.h  connection_pool.h  coordinator.h  hash_ring.h  heartbeat.h  membership.h
include/config/: config.h
include/network/: poller.h  protocol.h  tcp_server.h  thread_pool.h
include/replication/: hint_store.h
include/storage/: snapshot.h  storage_engine.h  wal.h
include/utils/: crc32.h  logger.h  murmurhash3.h
scripts/: bench_cluster.sh  patch_main.py
src/: main.cpp
src/cluster/: cluster_config.cpp  connection_pool.cpp  coordinator.cpp  hash_ring.cpp  heartbeat.cpp  membership.cpp
src/config/: config.cpp
src/network/: epoll_poller.cpp  kqueue_poller.cpp  protocol.cpp  tcp_server.cpp  thread_pool.cpp
src/replication/: hint_store.cpp
src/storage/: snapshot.cpp  storage_engine.cpp  wal.cpp
src/utils/: crc32.cpp  logger.cpp  murmurhash3.cpp
tests/integration/: test_tcp_server.cpp
tests/unit/: test_cluster_config.cpp  test_config.cpp  test_connection_pool.cpp  test_coordinator.cpp  test_crc32.cpp  test_hash_ring.cpp  test_heartbeat.cpp  test_hint_store.cpp  test_logger.cpp  test_membership.cpp  test_murmurhash3.cpp  test_protocol.cpp  test_snapshot.cpp  test_storage_engine.cpp  test_thread_pool.cpp  test_wal.cpp
tools/: dkv_cli.cpp
